Update HANDOFF.md — debug-play session summary
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>