@@ -1,107 +1,103 @@
 # Handoff Note
 
-**Branch:** `feature/e2e-replay` (PR #5 open, not merged yet)
+**Branch:** `debug-play`
 **Base:** `main`
-**Tests:** 26 passed, 0 failed
+**Tests:** e2e green (9/9), solace-replay scenario working
 
 ---
 
 ## Where we are
 
-Design and docs are solid. Engine handles the replay playbook end-to-end in dry-run.
-The next session goal is getting `docker compose run --rm e2e` green.
+The `debug-replay` scenario is fully built and smoke-tested end-to-end.
+`bin/sh.bang run` with dispatch works — `@` routes to scp/ssh based on verb.
+Next: run `debug-replay.shbang` as an actual playbook and clean up `#` vs `@` subject syntax.
 
 ---
 
 ## What was built this session
 
-### Engine changes
-- `lib/parser.sh` — skips `#!` labels, skips `resources {}` block, parses `$ run cmd -> varName`
-- `lib/expand.sh` — table-driven handlers, `expand_local` runs local cmd and stores in `SHBANG_RT`,
-  `render_vars` falls back: shard node → full context JSON → SHBANG_RT (for tradeFilter etc.),
-  selector auto-`[]` fix (was mangling named keys like `[primary]`), MSYS_NO_PATHCONV on jq calls
-- `lib/events.sh` — `parser.local` console formatter added
-- `lib/dispatch.sh` — jq `// empty` fallbacks, no more error noise
+### tools/bluebird-stub/
+Fake Bluebird trading app for the debug-replay demo.
+- `BluebirdStub.java` — three-phase startup: static data → recovery → ready/heartbeat
+- `StaticDataHandler.java` — processes `StaticData` lines (500ms delay each, simulates load)
+- `OrderEventHandler.java` — processes `NewOrderSingle` lines, **primary JDI breakpoint target**
+- `TradeEventHandler.java` — processes `ExecutionReport` lines
+- All events flow from `trading.rdat.in` in order (StaticData first, then orders/trades)
+- Built with `-g` (debug info) so local variable names are visible via JDI
+- JDWP injected via `start` script, not baked in
 
-### Replay example
-- `examples/replay/replay.shbang` — full playbook with `$ local` + `for_each`
-- `examples/replay/environment.json` — JSON context, 4 shards across 2 hosts (target1/target2)
-- `examples/replay/environment.conf` — HOCON version (needs HOCON jar, only works at work)
-- `examples/replay/trades.csv` — trade_001..trade_005
-- `examples/replay/trading1.hocon` + `trading2.hocon` — prod/SIT reference formats (keep these)
+### tools/jdi-attacher/
+JDI client that connects to a running JVM and arms a conditional breakpoint.
+- `--class` / `--method` / `--condition` named flags
+- `--condition` supports dot notation: `orderId=ORD-12345` or `m.tradeId=TRD-99`
+- `--hand-off` mode: on hit, prints locals + attach banner, detaches **without resuming** —
+  app stays suspended, IntelliJ connects and walks in at the exact line
+- Requires JDK (not JRE) — `java --add-modules jdk.jdi -jar jdi-attacher.jar`
+- Connector arg is `"hostname"` not `"host"` (already fixed)
 
-### Fake replay Java stub
-- `tools/replay-stub/ReplayStub.java` — reads rdat file, prints `Replayed X` or `Skipped X`
-- `tools/replay-stub/build.sh` — compile with javac + jar
-- `tools/replay-stub/replay-stub.jar` — pre-built with JDK25 locally
+### tests/lib/bbStruct.sh
+Sourceable fixture library for building Bluebird shard layouts over SSH.
+- `bb_create_shard_layout` / `bb_create_debug_binaries` / `bb_create_rdat` / `bb_destroy_shard`
+- `bb_create_debug_binaries` uploads `bluebird-stub.jar`, writes `start` (suspend=n) and
+  `start-intellij` (suspend=y — app waits for debugger before running)
+- Honours `E2E_SSH_KEY` and `E2E_SSH_CONFIG` env vars
 
-### e2e infrastructure
-- `tests/e2e/fixtures/shard_{1..4}/log.rdat.out` — 2 matching trades + 8 others per shard
-- `tests/e2e/setup-target.sh` — tars fixtures, SCPs to target hosts, creates dirs
-- `tests/e2e/run-e2e.sh` — full runner: setup → build jar → run playbook → assert output
-- `docker-compose.yml` — target1, target2 (Fedora+sshd), e2e service
-- `Dockerfile.server` — SSH key injection via entrypoint
-- `docker/server-entrypoint.sh` — injects SSH_PUBKEY env var into authorized_keys, starts sshd
+### tests/e2e/setup-debug-replay.sh
+Sets up all 4 shards on trading-host1/2 for the debug-replay scenario.
 
----
+### tests/e2e/fixtures/debug-replay/trading.rdat.in
+8 StaticData records + 6 orders + 2 trades. `ORD-12345` is the target order.
 
-## What needs to happen next session
+### examples/debug-replay/
+- `debug-replay.shbang` — the playbook (parser-clean, no stray `#` comments)
+- `environment.conf` — shared team config: shard topology + `include "developerScratchPad.hocon"`
+- `developerScratchPad.hocon` — developer's session config: staging host, archive date, debug block
 
-### 1. SSH keypair for e2e
-Generate a keypair for the e2e test:
-```bash
-ssh-keygen -t ed25519 -f tests/e2e/e2e_key -N ""
-```
-Pass to docker compose via env:
-```bash
-SSH_PUBKEY=$(cat tests/e2e/e2e_key.pub) SSH_PRIVKEY=tests/e2e/e2e_key docker compose run --rm e2e
-```
-Add `tests/e2e/e2e_key*` to `.gitignore`.
-
-### 2. Verify docker compose builds
-```bash
-docker compose build target1 target2 e2e
-```
-Check Dockerfile.server installs sshd correctly on ubi9.
-
-### 3. Wire SSH key into e2e runner
-`tests/e2e/run-e2e.sh` accepts `SSH_PRIVKEY` env var already.
-`setup-target.sh` accepts it as third arg already.
-Just needs the keypair generated (step 1).
-
-### 4. Run e2e
-```bash
-SSH_PUBKEY=$(cat tests/e2e/e2e_key.pub) \
-SSH_PRIVKEY=/path/to/e2e_key \
-docker compose run --rm e2e
-```
-
-### 5. Merge PR #5 once e2e is green
+### bin/playground
+Added `--debug-replay [shard] [class] [method] [condition]` mode:
+- Auto-sets up debug fixtures if missing
+- Starts bluebird-stub with JDWP
+- Runs jdi-attacher with `--hand-off`
+- Prints IntelliJ attach instructions on hit
 
 ---
 
-## Known issues / deferred
+## Smoke test (verified working)
 
-- **MSYS path mangling** — dry-run shows Windows paths for Linux paths (e.g. `/usr/bin/java` →
-  `C:/Program Files/Git/usr/bin/java`). Only affects dry-run display on Windows, not actual execution.
-  Not worth fixing now.
-- **`resources {}` block** — parsed but not resolved. `${trades}` path is hardcoded in playbook for now.
-  Resource resolution (download to `.shbang-resources/`) is a future sprint.
-- **Nested `for_each`** — not implemented in parser. Depth-first execution deferred.
-- **HOCON jar** — only available at work via Nexus. Use JSON context locally.
-- **`$` local subject** — implemented for `$ run -> capture` but not `$ send` etc.
+```bash
+docker compose up -d target1 target2
+docker compose run --rm e2e tests/e2e/setup-debug-replay.sh
+
+# start app + arm breakpoint + hand off to IntelliJ:
+docker compose run --rm e2e -c "
+  ssh ... deploy@trading-host1 'nohup ./start > /tmp/bluebird.log 2>&1 &'
+  java --add-modules jdk.jdi -jar tools/jdi-attacher/jdi-attacher.jar \
+    trading-host1:5005 \
+    --class OrderEventHandler --method process \
+    --condition orderId=ORD-12345 --hand-off
+"
+# → prints locals, prints attach banner, detaches
+```
 
 ---
 
-## Key design decisions (don't forget)
+## Immediate next steps
 
-- `@` = one-shot SSH under the hood (not interactive session) — engine builds `ssh -J` chains
-- `#` and `$` reserved for future use (one-shot explicit, local)
-- `:path` = implicit `cd` — engine handles it, playbook author never writes `cd`
-- `resources {}` block resolved as preflight before any `for_each`
-- `$ run cmd -> varName` captures local stdout into `SHBANG_RT[varName]`
-- HOCON alias trick: `shard = ${trading.instances}` makes both prod/SIT formats work with same selector
-- Nested `for_each` walks network path — each level is an SSH hop from previous context
-- Depth-first execution order = put nested block before pipes you want to run last
-- Hop mechanism (`ssh -J`) is swappable — many corp environments block ProxyJump
-- `conf` not `env` for context resource keyword (PowerShell conflict)
+1. **Run `debug-replay.shbang` as actual playbook** — dispatch is implemented, playbook should work
+2. **Drop `#` subject prefix** — `@` with `run` verb already goes to SSH, `#` is redundant.
+   Decide: remove `#` from language, or keep as alias?
+3. **Multiple `--ctx` files** — `--ctx environment.conf --ctx developerScratchPad.hocon`
+   so the `include` hack in environment.conf goes away
+4. **PR / merge** — `debug-play` branch into `main`
+
+---
+
+## Key facts to remember
+
+- `@host:path run cmd` → SSH; `@host:path fetch dst` → SCP fetch; `@host:path send src` → SCP send
+- `#host:path run cmd` → SSH (redundant with `@` for `run`, keep for now)
+- bluebird-stub needs `static data delay = 500ms × 8 products = 4s` window to attach jdi-attacher
+- jdi-attacher uses `"hostname"` (not `"host"`) for the SocketAttachingConnector arg
+- bluebird-stub compiled with `-g` — required for `visibleVariableByName()` to find `orderId`
+- JDWP ports: shard_1=5005, shard_2=5006, shard_3=5007(→5005 on host2), shard_4=5008(→5006 on host2)
+- `suspend=n` for jdi-attacher flow; `suspend=y` (start-intellij) for direct IntelliJ attach
